v2.51 Thu Dec 17 13:17:47 EST 2009
- strip non-numeric characters in Record.isbn() (André Nesse)

v2.50 Wed Dec 16 15:26:23 EST 2009
- changed default character set handling behavior back to what it was like 
  pre-v2.40. But retained the ability to convert to Unicode when reading
  by using MARCReader(to_unicode=True). Also added a parameter force_utf8
  to force decoding as UTF-8 for use in situations when the record is UTF-8, 
  but the leader hasn't been coded correctly. (Ed Summers)
- improved non-numeric tag functionality in Record.decode_marc -- comparison
  to determine if a tag should be treated as a control or variable field
  wasn't being done in the same way it was in Field.__init__ (Mark Matienzo)

v2.41
- added non-numeric tag functionality (thanks Mark Matienzo)

v2.40 
- renamed Record.as_marc21 Field.as_marc21 to Record.as_marc and Field.as_marc 
  to bring in line with Record.decode_marc -- but I created aliases for the
  old methods so people's code won't break.
- Record.decode_marc now decodes utf-8 after fields have been extracted with 
  byte offsets. Similarly Record.as_marc encodes fields as utf-8 before 
  calculating byte offsets. This hopefully will help people like Ted who
  were trying to create records with Unicode in them, serializing them as
  marc, and then other software complaining about record length, byte offsets
  being incorrect. https://lists.launchpad.net/pymarc-team/msg00007.html
- disabled quiet marc8 error test since whatever marc8 error was coming up
  now has disappeared with the new utf-8 encode/decode action.

v2.32 Sun Apr 19 21:20:31 EDT 2009
- added Field.delete_subfield thanks Ahuel Angelinetti 

v2.31 Sun Mar  1 09:11:11 EST 2009
- added strict namespace checking, thanks Godmar Back

v2.30 Tue Oct 21 08:27:58 EDT 2008
- added logic to Field to format integer tags if they aren't of length 3
  thanks to Ross Singer for noticing the problem

v2.23 Tue Jul  8 12:20:27 EDT 2008