@@ -245,14 +245,17 @@ class Record(object):
 
     def isbn(self):
         """
-        Returns an ISBN if appropriate. If not present None will
-        be returned.
+        Returns the first ISBN in the record or None if one is not
+        present. The returned ISBN will be all numberic; so dashes and 
+        extraneous information will be automatically removed. If you need 
+        this information you'll want to look directly at the 020 field, 
+        e.g. record['020']['a']
         """
         try:
             isbn_number = self['020']['a']
-            normalized_isbn = re.sub("\D","",isbn_number)
-            if normalized_isbn:
-                return normalized_isbn
+            match = re.search(r'([0-9\-]+)', isbn_number)
+            if match:
+                return match.group(1).replace('-', '')
         except TypeError:
             # ISBN not set
             pass
